--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
 
         <netty.version>4.1.65.Final</netty.version>
         <logback.version>1.2.3</logback.version>
+        <!--<logback.version>1.3.0-alpha5</logback.version>-->
+        <jansi.version>2.3.2</jansi.version>
         <lombok.version>1.18.20</lombok.version>
         <junit.version>5.7.2</junit.version>
     </properties>
@@ -45,6 +47,13 @@
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
                 <version>${logback.version}</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.fusesource.jansi/jansi -->
+            <dependency>
+                <groupId>org.fusesource.jansi</groupId>
+                <artifactId>jansi</artifactId>
+                <version>${jansi.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
