--- a/caraway-bin/pom.xml
+++ b/caraway-bin/pom.xml
@@ -15,7 +15,7 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
 
-        <mainClass>io.github.aomsweet.caraway.app.CarawayApplication</mainClass>
+        <mainClass>io.github.aomsweet.caraway.app.CarawayLauncher</mainClass>
         <graalvm.version>21.1.0</graalvm.version>
     </properties>
 
