--- a/caraway-bin/pom.xml
+++ b/caraway-bin/pom.xml
@@ -127,6 +127,10 @@
                                 <buildArg>--report-unsupported-elements-at-runtime</buildArg>
                                 <buildArg>--allow-incomplete-classpath</buildArg>
                                 <buildArg>-H:+ReportExceptionStackTraces</buildArg>
+                                <buildArg>-H:-AddAllCharsets</buildArg>
+                                <buildArg>-J-Dsun.nio.ch.maxUpdateArraySize=100</buildArg>
+                                <buildArg>-J-Dio.netty.allocator.maxOrder=3</buildArg>
+                                <buildArg>-J-Dio.netty.leakDetection.level=DISABLED</buildArg>
 
                                 <buildArg>--initialize-at-build-time=org.slf4j.impl.StaticLoggerBinder</buildArg>
                                 <buildArg>--initialize-at-build-time=org.slf4j.LoggerFactory</buildArg>
@@ -151,6 +155,10 @@
                                 <buildArg>--initialize-at-run-time=io.netty.buffer.PooledByteBufAllocator</buildArg>
                                 <buildArg>--initialize-at-run-time=io.netty.buffer.ByteBufAllocator</buildArg>
                                 <buildArg>--initialize-at-run-time=io.netty.buffer.ByteBufUtil</buildArg>
+
+                                <buildArg>--initialize-at-run-time=io.netty.handler.codec.http.HttpObjectEncoder</buildArg>
+                                <buildArg>--initialize-at-run-time=io.netty.handler.codec.http.websocketx.extensions.compression.DeflateDecoder</buildArg>
+                                <buildArg>--initialize-at-run-time=io.netty.handler.codec.http.websocketx.WebSocket00FrameEncoder</buildArg>
                             </buildArgs>
                         </configuration>
                     </plugin>
