--- a/caraway-bin/src/main/resources/META-INF/native-image/caraway-bin/reflect-config.json
+++ b/caraway-bin/src/main/resources/META-INF/native-image/caraway-bin/reflect-config.json
@@ -1,14 +1,45 @@
 [
     {
         "name": "io.netty.channel.socket.nio.NioSocketChannel",
-        "methods" : [
-            { "name" : "<init>", "parameterTypes" : [] }
+        "methods": [
+            {
+                "name": "<init>",
+                "parameterTypes": []
+            }
         ]
-    },{
+    },
+    {
         "name": "io.netty.channel.socket.nio.NioServerSocketChannel",
-        "methods" : [
-            { "name" : "<init>", "parameterTypes" : [] }
+        "methods": [
+            {
+                "name": "<init>",
+                "parameterTypes": []
+            }
         ]
+    },
+    {
+        "name": "io.netty.channel.socket.nio.NioDatagramChannel",
+        "methods": [
+            {
+                "name": "<init>",
+                "parameterTypes": []
+            }
+        ]
+    },
+    {
+        "name": "java.util.LinkedHashMap",
+        "methods": [
+            {
+                "name": "<init>",
+                "parameterTypes": []
+            }
+        ]
+    },
+    {
+        "name": "sun.nio.ch.SelectorImpl",
+        "allDeclaredConstructors": true,
+        "allDeclaredMethods": true,
+        "allDeclaredFields": true
     },
     {
         "name": "ch.qos.logback.classic.pattern.DateConverter",
