--- a/caraway-bin/pom.xml
+++ b/caraway-bin/pom.xml
@@ -12,10 +12,10 @@
     <artifactId>caraway-bin</artifactId>
 
     <properties>
+        <exec.mainClass>io.github.aomsweet.caraway.app.CarawayLauncher</exec.mainClass>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
 
-        <mainClass>io.github.aomsweet.caraway.app.CarawayLauncher</mainClass>
         <graalvm.version>21.1.0</graalvm.version>
     </properties>
 
@@ -57,6 +57,7 @@
     </dependencies>
 
     <build>
+        <finalName>caraway</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -75,7 +76,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>${mainClass}</mainClass>
+                            <mainClass>${exec.mainClass}</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
@@ -120,46 +121,8 @@
                         </executions>
                         <configuration>
                             <skip>false</skip>
-                            <imageName>${project.artifactId}</imageName>
-                            <mainClass>${mainClass}</mainClass>
-                            <buildArgs>
-                                <buildArg>--no-fallback</buildArg>
-                                <buildArg>--report-unsupported-elements-at-runtime</buildArg>
-                                <buildArg>--allow-incomplete-classpath</buildArg>
-                                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
-                                <buildArg>-H:-AddAllCharsets</buildArg>
-                                <buildArg>-J-Dsun.nio.ch.maxUpdateArraySize=100</buildArg>
-                                <buildArg>-J-Dio.netty.allocator.maxOrder=3</buildArg>
-                                <buildArg>-J-Dio.netty.leakDetection.level=DISABLED</buildArg>
-
-                                <buildArg>--initialize-at-build-time=org.slf4j.impl.StaticLoggerBinder</buildArg>
-                                <buildArg>--initialize-at-build-time=org.slf4j.LoggerFactory</buildArg>
-                                <buildArg>--initialize-at-build-time=org.slf4j.MDC</buildArg>
-                                <buildArg>--initialize-at-build-time=ch.qos.logback.classic.Logger</buildArg>
-                                <buildArg>--initialize-at-build-time=ch.qos.logback.core.spi.AppenderAttachableImpl</buildArg>
-                                <buildArg>--initialize-at-build-time=ch.qos.logback.core.status.StatusBase</buildArg>
-                                <buildArg>--initialize-at-build-time=ch.qos.logback.classic.Level</buildArg>
-                                <buildArg>--initialize-at-build-time=ch.qos.logback.core.status.InfoStatus</buildArg>
-                                <buildArg>--initialize-at-build-time=ch.qos.logback.classic.PatternLayout</buildArg>
-                                <buildArg>--initialize-at-build-time=ch.qos.logback.core.CoreConstants</buildArg>
-                                <buildArg>--initialize-at-build-time=ch.qos.logback.core.pattern.parser.Parser</buildArg>
-                                <buildArg>--initialize-at-build-time=ch.qos.logback.core.util.Loader</buildArg>
-
-                                <buildArg>--initialize-at-run-time=io.netty.handler.ssl.JdkNpnApplicationProtocolNegotiator</buildArg>
-                                <buildArg>--initialize-at-run-time=io.netty.handler.ssl.ConscryptAlpnSslEngine</buildArg>
-                                <buildArg>--initialize-at-run-time=io.netty.handler.ssl.ReferenceCountedOpenSslEngine</buildArg>
-                                <buildArg>--initialize-at-run-time=io.netty.handler.ssl.ReferenceCountedOpenSslContext</buildArg>
-                                <buildArg>--initialize-at-run-time=io.netty.handler.ssl.ReferenceCountedOpenSslClientContext</buildArg>
-                                <buildArg>--initialize-at-run-time=io.netty.handler.ssl.util.ThreadLocalInsecureRandom</buildArg>
-                                <buildArg>--initialize-at-run-time=io.netty.buffer.ByteBufUtil$HexUtil</buildArg>
-                                <buildArg>--initialize-at-run-time=io.netty.buffer.PooledByteBufAllocator</buildArg>
-                                <buildArg>--initialize-at-run-time=io.netty.buffer.ByteBufAllocator</buildArg>
-                                <buildArg>--initialize-at-run-time=io.netty.buffer.ByteBufUtil</buildArg>
-
-                                <buildArg>--initialize-at-run-time=io.netty.handler.codec.http.HttpObjectEncoder</buildArg>
-                                <buildArg>--initialize-at-run-time=io.netty.handler.codec.http.websocketx.extensions.compression.DeflateDecoder</buildArg>
-                                <buildArg>--initialize-at-run-time=io.netty.handler.codec.http.websocketx.WebSocket00FrameEncoder</buildArg>
-                            </buildArgs>
+                            <imageName>${build.finalName}</imageName>
+                            <mainClass>${exec.mainClass}</mainClass>
                         </configuration>
                     </plugin>
                 </plugins>
