--- a/caraway-bouncycastle/pom.xml
+++ b/caraway-bouncycastle/pom.xml
@@ -9,11 +9,22 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>caraway-mitm</artifactId>
+    <artifactId>caraway-bouncycastle</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>io.github.aomsweet</groupId>
+            <artifactId>caraway-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcpkix-jdk15on</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
