fix dependabot.yml contained invalid details
Signed-off-by: aomsweet <aomsweet@tutanota.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,8 +4,8 @@ updates:
         directory: "/"
         schedule:
             interval: daily
-            time: "9:00"
-            timezone: GMT+8
+            time: "09:00"
+            timezone: Etc/GMT+8
         open-pull-requests-limit: 10
         labels:
             - area/dependencies
