Improve dependabot.yml
Signed-off-by: aomsweet <aomsweet@tutanota.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,4 +17,5 @@ updates:
             -   dependency-name: org.junit.jupiter:junit-jupiter-engine
             -   dependency-name: org.graalvm.sdk:graal-sdk
             -   dependency-name: org.graalvm.nativeimage:svm
-        rebase-strategy: disabled
+                dependency-type: all
+        rebase-strategy: auto
