--- a/petty-bin/src/main/resources/META-INF/native-image/io.github.aomsweet/caraway-bin/native-image.properties
+++ b/petty-bin/src/main/resources/META-INF/native-image/io.github.aomsweet/caraway-bin/native-image.properties
@@ -4,7 +4,6 @@ Args=--no-fallback \
     -J-Dsun.nio.ch.maxUpdateArraySize=100 \
     -J-Dio.netty.allocator.maxOrder=3 \
     -J-Dio.netty.leakDetection.level=DISABLED \
-    --initialize-at-build-time=org.slf4j.impl.StaticLoggerBinder \
     --initialize-at-build-time=org.slf4j.LoggerFactory \
     --initialize-at-build-time=org.slf4j.MDC \
     --initialize-at-build-time=ch.qos.logback.classic.Logger \
@@ -16,6 +15,7 @@ Args=--no-fallback \
     --initialize-at-build-time=ch.qos.logback.core.CoreConstants \
     --initialize-at-build-time=ch.qos.logback.core.pattern.parser.Parser \
     --initialize-at-build-time=ch.qos.logback.core.util.Loader \
+    --initialize-at-build-time=ch.qos.logback.core.util.StatusPrinter \
     --initialize-at-run-time=io.netty.handler.ssl.JdkNpnApplicationProtocolNegotiator \
     --initialize-at-run-time=io.netty.handler.ssl.ConscryptAlpnSslEngine \
     --initialize-at-run-time=io.netty.handler.ssl.ReferenceCountedOpenSslEngine \
