--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>io.github.aomsweet</groupId>
     <artifactId>cyber-parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.0.alpha1-SNAPSHOT</version>
+    <version>1.0.0.alpha1</version>
     <modules>
         <module>cyber-core</module>
         <module>cyber-bouncycastle</module>
