--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
                 <configuration>
                     <archive>
                         <!-- Note: https://maven.apache.org/plugins/maven-jar-plugin/ -->
