--- a/cyber-bouncycastle/pom.xml
+++ b/cyber-bouncycastle/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>cyber-parent</artifactId>
         <groupId>io.github.aomsweet</groupId>
-        <version>1.0.0.alpha3</version>
+        <version>1.0.0.alpha4-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
